# prudential-life-insurance-assessment-python

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  notebook_companion.md  pyproject.toml  requirements-deploy.txt  requirements-hf.txt  requirements-streamlit.txt  requirements.txt  streamlit_app.py
.github/workflows/: cd.yml  ci.yml  deploy-blog.yml
blog/: index.qmd
data/: README.md
notebooks/modeling/: prudential-life-insurance-assessment-python-enhanced.ipynb  prudential-life-insurance-assessment-python.ipynb
src/: __init__.py  config.py  data.py  genai.py  metrics.py  mockup_app.py  models.py  persist.py  preprocess.py  shap_utils.py  tuning.py
tools/: enhance_notebook.py
